<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.cloudonix</groupId>
	<artifactId>arity</artifactId>
	<version>0.2.11</version>
	<repositories>
		<repository>
			<id>jcenter</id>
			<url>https://jcenter.bintray.com/</url>
		</repository>

		<repository>
			<id>jitsi-maven-repository-releases</id>
			<layout>default</layout>
			<name>Jitsi Maven Repository (Releases)</name>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>https://github.com/jitsi/jitsi-maven-repository/raw/master/releases/</url>
		</repository>
		<repository>
			<id>jitsi-maven-repository-snapshots</id>
			<layout>default</layout>
			<name>Jitsi Maven Repository (Snapshots)</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>https://github.com/jitsi/jitsi-maven-repository/raw/master/snapshots/</url>
		</repository>

		<repository>
			<id>cloudonix-dist</id>
			<url>http://cloudonix-dist.s3-website-us-west-1.amazonaws.com/maven2/releases</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.github.cloudonix</groupId>
			<artifactId>ari4java</artifactId>
			<version>cx-master-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>[1.5,)</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-ri</artifactId>
			<version>1.2.1.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-api</artifactId>
			<version>1.2.1.3</version>
			<scope>test</scope>

		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-json-org</artifactId>
			<version>2.9.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>[4,)</version>
		</dependency>
		<dependency>
			<groupId>io.cloudonix</groupId>
			<artifactId>future-helper</artifactId>
			<version>[1.6.2,)</version>
		</dependency>
		<dependency>
			<groupId>org.jitsi</groupId>
			<artifactId>libjitsi</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>true</createDependencyReducedPom>
							<artifactSet>
								<excludes>
									<exclude>junit:junit</exclude>
									<exclude>org.junit:*</exclude>
								</excludes>
							</artifactSet>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes> <!-- remove bouncy castle signatures so my jar wont be rejected -->
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>io.cloudonix.service.ARIty</Main-Class>
									</manifestEntries>
								</transformer>
							</transformers>
							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>
	</build>
</project>